--- a/exercice_1/style.css
+++ b/exercice_1/style.css
@@ -1,9 +1,9 @@
-*{
+* {
     margin: unset;
     padding: unset;
 }
 
-body{
+body {
     display: flex;
     background: center center fixed no-repeat url(bg_m.jpg);
     background-size: cover;
@@ -11,35 +11,35 @@ body{
     padding: 2rem;
 }
 
-section{
+section {
     padding-top: 3rem;
     display: flex;
     flex-direction: column;
     row-gap: 3rem;
 }
 
-h1{
+h1 {
     align-self: center;
     color: seashell;
     letter-spacing: 0.3rem;
     text-align: center;
 }
 
-article{
+article {
     display: flex;
     flex-direction: column;
     row-gap: 1.5rem;
 }
 
-h2{
+h2 {
     font-size: 1.4rem;
-    color:cadetblue;
+    color: cadetblue;
     font-weight: 200;
     letter-spacing: 0.1rem;
     text-align: center;
 }
 
-button{
+button {
     padding-left: 1.2rem;
     padding-right: 1.2rem;
     padding-top: 0.7rem;
@@ -53,23 +53,93 @@ button{
     outline-style: none;
 }
 
-button:hover{
+button:hover {
     transform: translateX(5px) translateY(-7px);
     background-color: blanchedalmond;
     box-shadow: 0 12px 60px -20px #cccccc;
 }
 
-p{
+p {
     align-self: center;
     color: snow;
     font-size: 1.1rem;
     letter-spacing: 0.1rem;
 }
 
-input{
+input {
     align-self: center;
     padding: 0.5rem;
     border-radius: 10px;
     text-align: center;
     outline-style: none;
+}
+
+@media (min-width : 728px) {
+    body {
+        background: top center fixed no-repeat url(bg.jpg);
+        background-size: cover;
+    }
+
+    section {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        align-items: center;
+        justify-content: center;
+        row-gap: 15vh;
+
+    }
+
+    article:nth-of-type(1) {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    article:nth-of-type(2) {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    article:nth-of-type(3) {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    article:nth-of-type(4) {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+    h1 {
+        padding-bottom: 5rem;
+    }
+
+    h2 {
+        color: snow;
+        font-weight: 600;
+    }
+
+    p {
+        font-size: 1.2rem;
+        color:snow;
+        font-weight: 600;
+    }
+
+    article:nth-of-type(1) h2, article:nth-of-type(2) h2{
+        color: darkslategrey;
+    }
+
+    article:nth-of-type(1) p{
+        color: #1c1c1c;
+    }
+
+    input{
+        font-size: 1.2rem;
+        border-radius: 20px;
+    }
+
+    button{
+        font-size: 1.2rem;
+        border-radius: 20px;
+    }
 }
